objects/Event_Organizer__c.object
<CustomObject>
    <description>Object for Event Organizers</description>
    <fields>
        <fullName>Alternative_Email__c</fullName>
        <description>Different email address.</description>
        <inlineHelpText>This can be use if the primary email address is not working.</inlineHelpText>
        <label>Alternative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternative_Phone__c</fullName>
        <description>Different phone number.</description>
        <inlineHelpText>This can be use to contact event organizer if primary number is not working.</inlineHelpText>
        <label>Alternative Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Needs to be valid email address</description>
        <inlineHelpText>This can be use for contacting the event organizer.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location of the organizer.</description>
        <inlineHelpText>This is the location of the organizer.</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Event Organizers</relationshipLabel>
        <relationshipName>Event_Organizers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Valid phone number.</description>
        <inlineHelpText>This can be use for contacting the event organizer.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Event Organizer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Organizer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Organizers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>